// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Canonical Story Page A11y I can see the skip to content link 1`] = `"Сайтка өтүү"`;

exports[`Canonical Story Page Analytics ATI tracking pixel excluding src 1`] = `"<img height="1px" width="1px" alt="" style="position:absolute" >"`;

exports[`Canonical Story Page Analytics ATI tracking pixel hostname 1`] = `"https://logws1363.ati-host.net/hit.xiti"`;

exports[`Canonical Story Page Analytics ATI tracking pixel search params 1`] = `
[
  {
    "s": "598343",
  },
  {
    "s2": "58",
  },
  {
    "p": "kyrgyz.story.23292889.page",
  },
  {
    "x1": "[urn:bbc:cps:curie:asset:bb9390aa-4b35-e448-b295-cbd7369fe457]",
  },
  {
    "x2": "[responsive]",
  },
  {
    "x3": "[news-kyrgyz]",
  },
  {
    "x4": "[ky]",
  },
  {
    "x7": "[article]",
  },
  {
    "x8": "[simorgh-nojs]",
  },
  {
    "x9": "[Test%20STY%20for%20social%20embeds%20-%20BBC%20News%20Кыргыз%20Кызматы]",
  },
  {
    "x11": "[2020-04-24T14:51:17.000Z]",
  },
  {
    "x12": "[2020-04-24T14:51:17.000Z]",
  },
]
`;

exports[`Canonical Story Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, Кыргыз КызMATы",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 2`] = `
{
  "text": "Эмнеге BBC News ишенсе болот?",
  "url": "https://www.bbc.com/kyrgyz/institutional-49677275",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 3`] = `
{
  "text": "Колдонуу эрежелери",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157280",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 4`] = `
{
  "text": "Би-Би-Си жөнүндө",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157281",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 5`] = `
{
  "text": "Купуялык",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157282",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 6`] = `
{
  "text": "Cookies",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 7`] = `
{
  "text": "Би-Би-Си менен байланышыңыз",
  "url": "https://www.bbc.co.uk/kyrgyz/send/u50853445",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 8`] = `
{
  "text": "Башка тилдерде",
  "url": "https://www.bbc.com/ws/languages",
}
`;

exports[`Canonical Story Page Footer Anchors should match text and url 9`] = `
{
  "text": "Башка интернет сайттардын мазмуну боюнча биздин позиция.",
  "url": "https://www.bbc.com/editorialguidelines/guidance/links-and-feeds",
}
`;

exports[`Canonical Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/kyrgyz"`;

exports[`Canonical Story Page Footer Paragraphs should match text 1`] = `"© 2025 BBC. Би-Би-Си сырткы интернет сайттардын мазмуну үчүн жооптуу эмес. Башка интернет сайттардын мазмуну боюнча биздин позиция."`;

exports[`Canonical Story Page Header I can see the branding 1`] = `
{
  "brandLink": "BBC News, Кыргыз КызMATы",
  "svg": <path
    d="M759.928 265.75a4646.67 4646.67 0 00-23.49-37.242 2633.129 2633.129 0 00-23.49-36.2v73.442h-22.003V159.452h23.193a2668.556 2668.556 0 0123.713 36.052 2774.159 2774.159 0 0123.266 36.647v-72.699h22.004V265.75h-23.193zM804.187 159.452h73.145v19.03h-50.25v23.044h44.6v19.029h-44.6v26.166h53.075v19.03h-75.97V159.451zM982.101 265.75a3174.441 3174.441 0 01-9.886-35.978 3159.855 3159.855 0 01-9.441-35.977 2391.54 2391.54 0 01-9.217 35.977 2452.296 2452.296 0 01-9.812 35.978h-24.233a2032.839 2032.839 0 01-14.57-52.628c-4.66-17.74-9.069-35.63-13.231-53.67h24.976a2003.215 2003.215 0 007.88 41.33 1444.404 1444.404 0 008.77 40.586 3259.894 3259.894 0 0018.882-77.456h22.3a3251.95 3251.95 0 0018.732 75.821 1999.976 1999.976 0 008.623-39.843 1455.41 1455.41 0 007.73-40.438h24.531a1845.28 1845.28 0 01-13.23 53.67 2041.61 2041.61 0 01-14.57 52.628H982.1zM1077.471 267.98c-5.849 0-11.621-.645-17.32-1.932a66.227 66.227 0 01-16.427-6.096v-20.516c10.604 6.444 21.854 9.663 33.747 9.663 6.74 0 11.869-1.138 15.388-3.419 3.517-2.28 5.277-5.45 5.277-9.515 0-3.07-.868-5.475-2.601-7.21-1.735-1.733-4.04-3.122-6.914-4.163-2.875-1.04-6.095-2.007-9.663-2.899-5.849-1.387-11.002-2.974-15.462-4.757-4.46-1.784-8.227-3.889-11.298-6.319-3.073-2.427-5.403-5.352-6.988-8.771-1.586-3.42-2.378-7.508-2.378-12.265 0-6.74 1.71-12.537 5.128-17.395 3.42-4.855 8.252-8.597 14.496-11.225 6.244-2.624 13.678-3.939 22.3-3.939 5.65 0 11.2.646 16.651 1.933 5.45 1.289 10.356 3.024 14.719 5.203v20.22c-4.363-2.677-9.292-4.758-14.793-6.245-5.5-1.487-11.027-2.23-16.577-2.23-6.046 0-10.73 1.04-14.049 3.122-3.322 2.081-4.98 5.055-4.98 8.92 0 2.776.792 4.98 2.378 6.616 1.585 1.635 3.84 2.973 6.765 4.014 2.922 1.04 6.367 2.058 10.332 3.047 5.055 1.29 9.761 2.702 14.124 4.238 4.36 1.537 8.2 3.493 11.521 5.872 3.32 2.379 5.896 5.403 7.731 9.069 1.834 3.668 2.75 8.177 2.75 13.529 0 7.038-1.735 13.06-5.202 18.063-3.47 5.006-8.475 8.823-15.016 11.447-6.542 2.626-14.421 3.94-23.639 3.94z"
  />,
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 1`] = `
{
  "text": "Башкы бет",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 2`] = `
{
  "text": "Видео жаңылыктар",
  "url": "/kyrgyz/bbc_kyrgyz_tv/tv_programmes/w13xttqx?limit=4t",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 3`] = `
{
  "text": "Кыргызстан",
  "url": "/kyrgyz/topics/cz74kjpyk07t",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 4`] = `
{
  "text": "Дүйнө",
  "url": "/kyrgyz/topics/ck2l9z012nkt",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 5`] = `
{
  "text": "Журнал",
  "url": "/kyrgyz/topics/czp8pjrkgp0t",
}
`;

exports[`Canonical Story Page Image Caption should match text 1`] = `"Сүрөттүн түшүндүрмөсү, Social media"`;

exports[`Canonical Story Page Image should match snapshot 1`] = `
<img
  alt="social media"
  class="css-1seqhu9"
  height="351"
  loading="eager"
  sizes="(min-width: 1008px) 760px, 100vw"
  src="https://ichef.bbci.co.uk/ace/ws/640/cpsdevpb/11D53/test/_63734037_socialmedia.jpg.webp"
  srcset="https://ichef.bbci.co.uk/ace/ws/240/cpsdevpb/11D53/test/_63734037_socialmedia.jpg.webp 240w, https://ichef.bbci.co.uk/ace/ws/320/cpsdevpb/11D53/test/_63734037_socialmedia.jpg.webp 320w, https://ichef.bbci.co.uk/ace/ws/480/cpsdevpb/11D53/test/_63734037_socialmedia.jpg.webp 480w, https://ichef.bbci.co.uk/ace/ws/624/cpsdevpb/11D53/test/_63734037_socialmedia.jpg.webp 624w"
  style="aspect-ratio:624 / 351"
  width="624"
/>
`;

exports[`Canonical Story Page Lead image I can see an image with a caption 1`] = `"Сүрөттүн түшүндүрмөсү, Social media"`;

exports[`Canonical Story Page Main heading should match text 1`] = `"Test STY for social embeds"`;

exports[`Canonical Story Page Most Read has item with rank 1`] = `
{
  "text": "АКШ: жаңы президент ким экенин аныктаган штаттар кайсылар?",
  "url": "/kyrgyz/world-23090100",
}
`;

exports[`Canonical Story Page Most Read has item with rank 2`] = `
{
  "text": "Kyrgyzstanda soz erkindigi buzuluuda",
  "url": "/kyrgyz/world-23089413",
}
`;

exports[`Canonical Story Page Most Read has item with rank 3`] = `
{
  "text": "Тарых барактары: Кыргызстан-Өзбекстан ортосундагы коңшулук мамиле 36",
  "url": "/kyrgyz/kyrgyzstan-23087515",
}
`;

exports[`Canonical Story Page Most Read has item with rank 4`] = `
{
  "text": "Тарых барактары: Кыргызстан-Өзбекстан ортосундагы коңшулук мамиле 34",
  "url": "/kyrgyz/kyrgyzstan-23087513",
}
`;

exports[`Canonical Story Page Most Read has item with rank 5`] = `
{
  "text": "Тарых барактары: Кыргызстан-Өзбекстан ортосундагы коңшулук мамиле 35",
  "url": "/kyrgyz/kyrgyzstan-23087514",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 1`] = `
{
  "sizes": null,
  "url": "http://localhost:7081/kyrgyz/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 2`] = `
{
  "sizes": "152x152",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 3`] = `
{
  "sizes": "180x180",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 4`] = `
{
  "sizes": "384x384",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 5`] = `
{
  "sizes": "512x512",
  "url": "https://static.files.bbci.co.uk/ws/simorgh-assets/public/kyrgyz/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Story Page SEO Canonical link 1`] = `"http://localhost:7081/kyrgyz/23292889"`;

exports[`Canonical Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Story Page SEO Heading level 1 1`] = `"Test STY for social embeds"`;

exports[`Canonical Story Page SEO Lang attribute 1`] = `"ky"`;

exports[`Canonical Story Page SEO Linked data should match text 1`] = `
{
  "@context": "http://schema.org",
  "@graph": [
    {
      "@type": "NewsArticle",
      "author": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
          "width": 1024,
        },
        "name": "BBC News Кыргыз Кызматы",
        "noBylinesPolicy": "https://www.bbc.com/kyrgyz/institutional-49677275#authorexpertise",
      },
      "dateModified": "2020-04-24T14:51:17.000Z",
      "datePublished": "2020-04-24T14:51:17.000Z",
      "description": "A test STY for social embeds",
      "headline": "Test STY for social embeds",
      "image": {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg",
        "width": 1024,
      },
      "inLanguage": {
        "@type": "Language",
        "alternateName": "ky",
        "name": "Kyrgyz",
      },
      "mainEntityOfPage": {
        "@id": "http://localhost:7081/kyrgyz/23292889",
        "@type": "WebPage",
        "name": "Test STY for social embeds",
      },
      "publisher": {
        "@type": "NewsMediaOrganization",
        "logo": {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
          "width": 1024,
        },
        "name": "BBC News Кыргыз Кызматы",
        "publishingPrinciples": "https://www.bbc.com/kyrgyz/institutional-49677275",
      },
      "thumbnailUrl": "https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg",
      "url": "http://localhost:7081/kyrgyz/23292889",
    },
  ],
}
`;

exports[`Canonical Story Page SEO OG description 1`] = `"A test STY for social embeds"`;

exports[`Canonical Story Page SEO OG image 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg"`;

exports[`Canonical Story Page SEO OG image alt 1`] = `"social media"`;

exports[`Canonical Story Page SEO OG locale 1`] = `"ky-KG"`;

exports[`Canonical Story Page SEO OG site name 1`] = `"BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO OG title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO OG type 1`] = `"article"`;

exports[`Canonical Story Page SEO OG url 1`] = `"http://localhost:7081/kyrgyz/23292889"`;

exports[`Canonical Story Page SEO Page title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO Robots meta tag 1`] = `"noodp, noydir, max-image-preview:large"`;

exports[`Canonical Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Story Page SEO Twitter creator 1`] = `"@bbckyrgyz"`;

exports[`Canonical Story Page SEO Twitter description 1`] = `"A test STY for social embeds"`;

exports[`Canonical Story Page SEO Twitter image alt 1`] = `"social media"`;

exports[`Canonical Story Page SEO Twitter image src 1`] = `"https://ichef.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg"`;

exports[`Canonical Story Page SEO Twitter site 1`] = `"@bbckyrgyz"`;

exports[`Canonical Story Page SEO Twitter title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page Timestamp should match text and date 1`] = `
{
  "date": "2020-04-24",
  "text": "24 апрель 2020",
}
`;
